# Bookmark-backend

./: Cargo.toml  Readme.md
Bookmark-backend/: .env.example  Cargo.toml  Readme.md
Bookmark-backend/src/: main.rs
Bookmark-backend/src/config/: env.rs
Bookmark-backend/src/db/: mongo.rs
Bookmark-backend/src/errors/: app_error.rs
Bookmark-backend/src/handlers/: auth.rs  import.rs  search.rs  tag.rs
Bookmark-backend/src/models/: bookmark.rs  collection.rs  user.rs
Bookmark-backend/src/routes/: collection.rs  import.rs  search.rs  tag.rs
Bookmark-backend/src/utils/: jwt.rs
bookmark-frontend/: package-lock.json  package.json
bookmark-frontend/src/app/: globals.css  layout.tsx
bookmark-frontend/src/app/(auth)/login/: page.tsx
bookmark-frontend/src/app/(auth)/register/: page.tsx
bookmark-frontend/src/app/(dashboard)/: layout.tsx
bookmark-frontend/src/app/(dashboard)/bookmarks/: page.tsx
bookmark-frontend/src/app/(dashboard)/collections/: page.tsx
bookmark-frontend/src/components/bookmarks/: BookmarkCard.tsx  BookmarkForm.tsx
bookmark-frontend/src/components/collections/: CollectionCard.tsx  CollectionForm.tsx
bookmark-frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
bookmark-frontend/src/lib/: api.ts  utils.ts
bookmark-frontend/src/types/: index.ts
src/: main.rs
src/config/: env.rs
src/db/: mongo.rs
src/handlers/: auth.rs  bookmark.rs  collection.rs
src/middleware/: auth.rs
src/models/: user.rs
src/routes/: auth.rs  bookmark.rs
src/state/: app_state.rs
src/utils/: jwt.rs
(+3 files in other folders)
