[package]
name = "Bookmark-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

mongodb = "2"

dotenvy = "0.15"

thiserror = "1"

tower-http = { version = "0.5", features = ["cors"] }

uuid = { version = "1", features = ["v4", "serde"] }